[package]
edition      = "2024"
name         = "lolin32-blink-rust"
rust-version = "1.88"
version      = "0.1.0"

[[bin]]
name = "lolin32-blink-rust"
path = "./src/bin/main.rs"

[dependencies]
esp-hal = { version = "~1.0", features = ["esp32"] }
esp-println = { version = "0.13.0", features = ["esp32", "auto"] }
esp-backtrace = { version = "0.15.0", features = ["esp32", "panic-handler", "println"] }
esp-bootloader-esp-idf = { version = "0.4.0", features = ["esp32"] }

[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = "s"

[profile.release]
codegen-units    = 1     # LLVM can perform better optimizations using a single thread
debug            = 2
debug-assertions = false
incremental      = false
lto              = 'fat'
opt-level        = 's'
overflow-checks  = false
